# pg_duckpipe

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.daemon  LICENSE  Makefile  PROCESS.md  PROGRESS.md  README.md  docker-bake.hcl  docker-compose.daemon.yml  docker-compose.yml  install.sh
.claude/skills/bump-pgducklake/: SKILL.md
.claude/skills/setup/: SKILL.md
.github/workflows/: ci.yaml  docker.yaml
benchmark/: .dockerignore  .gitignore  README.md  SOAK_TEST.md  analyze_results.py  bench.sh  bench_suite.sh  lib.py  oltp_insert_heavy.lua  run_sysbench.py  start_db.sh  stop_db.sh
benchmark/results/: report.md
benchmark/soak/: Dockerfile.bench  Dockerfile.db  RUNBOOK.md  docker-compose.soak-daemon.yml  docker-compose.soak-debug.yml  docker-compose.soak.yml  soak_monitor.sh  soak_report.py  soak_test.py  soak_test_daemon.py
benchmark/suite/: bench.sh  bench_suite.sh  run_sysbench.py
doc/: ACCESS_CONTROL.md  CODE_WALKTHROUGH.md  DAEMON.md  DATA_TYPES.md  DESIGN.md  DESIGN_V2.md  FAN_IN.md  PARALLELISM.md  QUICKSTART.md  REMOTE_SYNC.md  USAGE.md
doc/img/: STYLE.md
docker/: .env  Dockerfile  Dockerfile.daemon  build-ducklake-ext.sh  docker-bake.hcl  docker-compose.daemon.yml  docker-compose.yml  fetch-ducklake-ext.sh
docker/init.d/: 0001-install-extensions.sql  0002-localhost-trust.sh  Z01-install-pg_duckpipe.sql
duckpipe-core/: Cargo.toml
duckpipe-core/src/: connstr.rs  duckdb_flush.rs  duckdb_secrets.rs  flush_coordinator.rs  flush_worker.rs  lib.rs  listen.rs  metadata.rs  queue.rs  service.rs  slot_consumer.rs  snapshot.rs  snapshot_manager.rs  types.rs
duckpipe-daemon/: Cargo.toml
duckpipe-daemon/src/: main.rs
duckpipe-daemon/src/api/: error.rs  groups.rs  health.rs  metrics.rs  mod.rs  status.rs  tables.rs
duckpipe-pg/: Cargo.toml  build.rs
duckpipe-pg/src/: api.rs  lib.rs  planner_hook.rs  worker.rs
duckpipe-pg/src/sql/: bootstrap.sql
sql/: pg_ducklake_sync--1.0.sql  pg_duckpipe--1.0.sql
src/: api.c  apply.c  batch.c  decoder.c  pg_ducklake_sync.c  pg_ducklake_sync.h  pg_duckpipe.c  pg_duckpipe.h  worker.c
test/daemon/: Makefile  README.md  daemon.conf  run_tests.sh
test/daemon/lib/: helpers.sh
test/daemon/tests/: 01_basic_streaming.sh  02_snapshot_sync.sh  03_mixed_dml.sh  04_multiple_tables.sh  05_daemon_restart.sh  06_api_health.sh  07_api_add_remove_table.sh  08_api_group_lifecycle.sh  09_api_resync.sh  10_api_advisory_lock.sh
test/expected/: api.out  snapshot_updates.out  streaming.out
test/regression/: Makefile  regression.conf  schedule
test/regression/expected/: acl.out  api.out  append_crash_recovery.out  append_mode.out  append_mode_no_pk.out  auto_start.out  composite_pk.out  concurrent_flush_stress.out  concurrent_tables.out  (+38 more)
test/sql/: api.sql  snapshot_updates.sql  streaming.sql
(+41 files in other folders)
