[workspace]
members = ["duckpipe-core", "duckpipe-pg", "duckpipe-daemon"]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
duckdb = { version = "=1.4.3" }
pgwire-replication = { version = "0.2", features = ["tls-rustls"] }
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"
