[package]
name = "duckpipe-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
duckdb.workspace = true
pgwire-replication.workspace = true
futures-util.workspace = true
