[package]
name = "duckpipe-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
duckdb.workspace = true
pgwire-replication.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
tokio-postgres-rustls.workspace = true
webpki-roots.workspace = true
