[package]
name = "pg_duckpipe"
version = "1.0.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_duckpipe"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
duckpipe-core = { path = "../duckpipe-core" }
pgrx = "0.16.1"
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
rustls.workspace = true
tokio-postgres-rustls.workspace = true
webpki-roots.workspace = true

[build-dependencies]
pgrx-pg-config = "0.16.1"
